--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Microphone Frequency Analyzer</title>
     <script type="module" src="frequencyAnalyzer.js"></script>
+    <link rel="stylesheet" href="CSS/styles.css" />
 </head>
 <body>
     <div class="body-wrapper">
-        <p>It sounds like you're playing...</p>
-        <h1 id="note-name"></h1>
         <p>
             <span>frequency (Hz): </span>
             <span id="frequency"></span>
         </p>
+        <h1 id="note-name"></h1>
     </div>
 </body>
 </html>
