--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Microphone Frequency Analyzer</title>
-    <script type="module" src="frequencyAnalyzer.js"></script>
+    <script type="module" src="frequencyanalyzer.js"></script>
     <link rel="stylesheet" href="CSS/styles.css" />
 </head>
 <body>
