--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Microphone Frequency Analyzer</title>
     <script type="module" src="frequencyanalyzer.js"></script>
-    <link rel="stylesheet" href="CSS/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <div class="body-wrapper">
