--- a/index.html
+++ b/index.html
@@ -10,17 +10,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <canvas class="frequency-bars"></canvas>
+    <!-- Removed the frequency bars canvas element -->
+    <canvas class="tuner"></canvas>
     <div class="meter">
       <div class="meter-dot"></div>
       <div class="meter-pointer"></div>
     </div>
-    <div class="notes">
-      <div class="notes-list"></div>
-      <div class="frequency">
-        <span>Hz</span>
-      </div>
-    </div>
+   
     <div class="a4">A<sub>4</sub> = <span>440</span> Hz</div>
     <label class="auto">
       Auto
@@ -30,7 +26,7 @@
     <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
     <script src="tuner.js"></script>
     <script src="meter.js"></script>
-    <script src="frequency-bars.js"></script>
+    <!-- Removed the script for frequency bars -->
     <script src="notes.js"></script>
     <script src="app.js"></script>
   </body>
