--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@
       name="viewport"
       content="width=device-width,initial-scale=1,user-scalable=no"
     />
-    <title>Guitar Tab Tracker</title>
+    <title>Online Tuner</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Removed the frequency bars canvas element -->
-    <canvas class="tuner"></canvas>
+    <canvas class="frequency-bars"></canvas>
     <div class="meter">
       <div class="meter-dot"></div>
       <div class="meter-pointer"></div>
     </div>
-   
+    <div class="notes">
+      <div class="notes-list"></div>
+      <div class="frequency">
+        <span>Hz</span>
+      </div>
+    </div>
     <div class="a4">A<sub>4</sub> = <span>440</span> Hz</div>
     <label class="auto">
       Auto
@@ -26,7 +30,7 @@
     <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
     <script src="tuner.js"></script>
     <script src="meter.js"></script>
-    <!-- Removed the script for frequency bars -->
+    <script src="frequency-bars.js"></script>
     <script src="notes.js"></script>
     <script src="app.js"></script>
   </body>
