--- a/index.html
+++ b/index.html
@@ -30,15 +30,8 @@
     <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
     <script src="tuner.js"></script>
     <script src="meter.js"></script>
+    <script src="frequency-bars.js"></script>
     <script src="notes.js"></script>
     <script src="app.js"></script>
-
-    <!-- Initialize and start the tuner -->
-    <script>
-      document.addEventListener("DOMContentLoaded", function() {
-        const tuner = new Tuner(); // You can pass A4 frequency as an argument if needed
-        tuner.init();
-      });
-    </script>
   </body>
 </html>
