--- a/index.html
+++ b/index.html
@@ -1,37 +1,76 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1,user-scalable=no"
-    />
-    <title>Online Tuner</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <canvas class="frequency-bars"></canvas>
-    <div class="meter">
-      <div class="meter-dot"></div>
-      <div class="meter-pointer"></div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+  <title>Online Tuner</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Add the tab styles here */
+    .tab-container {
+      position: relative;
+      width: 200px;
+      height: 40px;
+      background-color: #3498db;
+      border-radius: 5px;
+      overflow: hidden;
+      cursor: pointer;
+      margin-top: 20px; /* Adjust the margin based on your layout */
+    }
+
+    .tab-content {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      padding: 10px;
+      background-color: #2980b9;
+      color: #fff;
+      border-radius: 0 0 5px 5px;
+      box-sizing: border-box;
+      transform: scaleY(0);
+      transform-origin: top;
+      transition: transform 0.3s ease-in-out;
+      visibility: hidden;
+    }
+
+    .tab-container:hover .tab-content {
+      transform: scaleY(1);
+      visibility: visible;
+    }
+  </style>
+</head>
+<body>
+  <canvas class="frequency-bars"></canvas>
+  <div class="meter">
+    <div class="meter-dot"></div>
+    <div class="meter-pointer"></div>
+  </div>
+  <div class="notes">
+    <div class="notes-list"></div>
+    <div class="frequency">
+      <span>Hz</span>
     </div>
-    <div class="notes">
-      <div class="notes-list"></div>
-      <div class="frequency">
-        <span>Hz</span>
-      </div>
+  </div>
+  <div class="a4">A<sub>4</sub> = <span>440</span> Hz</div>
+  <label class="auto">
+    Auto
+    <input type="checkbox" checked />
+  </label>
+
+  <!-- Add the tab container here -->
+  <div class="tab-container">
+    <div class="tab-content">
+      <p>This is where your notes go. You can add any content here.</p>
     </div>
-    <div class="a4">A<sub>4</sub> = <span>440</span> Hz</div>
-    <label class="auto">
-      Auto
-      <input type="checkbox" checked />
-    </label>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
-    <script src="tuner.js"></script>
-    <script src="meter.js"></script>
-    <script src="frequency-bars.js"></script>
-    <script src="notes.js"></script>
-    <script src="app.js"></script>
-  </body>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+  <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
+  <script src="tuner.js"></script>
+  <script src="meter.js"></script>
+  <script src="frequency-bars.js"></script>
+  <script src="notes.js"></script>
+  <script src="app.js"></script>
+</body>
 </html>
