--- a/index.html
+++ b/index.html
@@ -8,24 +8,28 @@
     />
     <title>Guitar Tab Tracker</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="navbar.css" /> 
   </head>
   <body>
-    <canvas class="frequency-bars"></canvas>
-    <div class="meter">
-      <div class="meter-dot"></div>
-      <div class="meter-pointer"></div>
-    </div>
-    <div class="notes">
-      <div class="notes-list"></div>
-      <div class="frequency">
-        <span>Hz</span>
-      </div>
-    </div>
-    <div class="a4">A<sub>4</sub> = <span>440</span> Hz</div>
-    <label class="auto">
-      Auto
-      <input type="checkbox" checked />
-    </label>
+    <nav class="navbar">
+        <div class="navbar-container">
+          <ul class="navbar-menu">
+            <li class="navbar-item">
+              <a href="/" class="navbar-links"> Chat </a>
+            </li>
+            <li class="navbar-item">
+              <a href="/tuner.html" class="navbar-links"> Tuner </a>
+            </li>
+          </ul>
+        </div>
+        <div class="navbar-toggle" id="mobile-menu">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </nav>
+
+    
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
     <script src="tuner.js"></script>
@@ -33,5 +37,6 @@
     <script src="frequency-bars.js"></script>
     <script src="notes.js"></script>
     <script src="app.js"></script>
+    <script src="navbar.js"></script>
   </body>
 </html>
