--- a/tuner.html
+++ b/tuner.html
@@ -15,10 +15,10 @@
       <div class="navbar-container">
         <ul class="navbar-menu">
           <li class="navbar-item">
-            <a href="/" class="navbar-links"> Chat </a>
+            <a href="/" class="navbar-links1"> Chat </a>
           </li>
           <li class="navbar-item">
-            <a href="/tuner.html" class="navbar-links"> Tuner </a>
+            <a href="/tuner.html" class="navbar-links2"> Tuner </a>
           </li>
         </ul>
       </div>
