--- a/tuner.html
+++ b/tuner.html
@@ -28,6 +28,13 @@
         <span class="bar"></span>
       </div>
     </nav>
+    <div class="note-flipper-container">
+      <div class="a4">A<sub>4</sub> = <span>440</span> Hz</div>
+      <label class="auto">
+        Auto
+        <input type="checkbox" checked />
+      </label>
+    </div>
     <canvas class="frequency-bars"></canvas>
     <div class="meter">
       <div class="meter-dot"></div>
@@ -39,11 +46,6 @@
         <span>Hz</span>
       </div>
     </div>
-    <div class="a4">A<sub>4</sub> = <span>440</span> Hz</div>
-    <label class="auto">
-      Auto
-      <input type="checkbox" checked />
-    </label>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
     <script src="tuner.js"></script>
