--- a/tuner.html
+++ b/tuner.html
@@ -13,12 +13,16 @@
   <body>
     <nav class="navbar">
       <div class="navbar-container">
+        <!--<div class="Guitar"> Guitar Hub</div>-->
         <ul class="navbar-menu">
           <li class="navbar-item">
             <a href="/" class="navbar-links1"> Chat </a>
           </li>
           <li class="navbar-item">
             <a href="/tuner.html" class="navbar-links2"> Tuner </a>
+          </li>
+          <li class="navbar-item">
+            <a href="/chords.html" class="navbar-links2"> Chords </a>
           </li>
         </ul>
       </div>
