--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <title>Guitar Tab Tracker</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="navbar.css" /> 
+    <link rel="stylesheet" href="songfinder.css" /> 
   </head>
   <body>
     <nav class="navbar">
         <div class="navbar-container">
           <ul class="navbar-menu">
             <li class="navbar-item">
-              <a href="/" class="navbar-links1"> Chat </a>
+              <a href="/" class="navbar-links1"> Song Finder </a>
             </li>
             <li class="navbar-item">
               <a href="/tuner.html" class="navbar-links2"> Tuner </a>
@@ -31,6 +32,10 @@
           <span class="bar"></span>
         </div>
       </nav>
+    <div class="record-container">
+        <button class="record-button" onclick="songfinder.prototype.startRecord()">Start Record</button>
+        <button class="stop-record-button" onclick="songfinder.prototype.handleStopButtonClick()">Stop Record</button> 
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
     <script src="tuner.js"></script>
@@ -39,5 +44,6 @@
     <script src="notes.js"></script>
     <script src="app.js"></script>
     <script src="navbar.js"></script>
+    <script src="songfinder.js"></script>
   </body>
 </html>
