--- a/chords.html
+++ b/chords.html
@@ -33,8 +33,8 @@
         </div>
       </nav>
 
-
-    <div id="chord-generator">
+    <div class="chord-container">
+      <div id="chord-generator">
         <h1>Chord Generator</h1>
         <div>
             <label for="instrument-select">Instrument:</label>
@@ -59,6 +59,8 @@
             <!-- Chord diagram will be displayed here -->
         </div>
     </div>
+    </div>
+
     <script src="chords.js"></script>
 
     <div id="chord-library"></div>
@@ -70,9 +72,6 @@
     <script src="chordsrc/db/guitar/suffixes.js"></script>
     <script src="chordsrc/db/guitar/tunings.js"></script>
     <script src="chordsrc/db/guitar/notes/_Ab.js"></script>
-    <!-- Include other note scripts here -->
-    <script src="script.js"></script>
-
     
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="https://cdn.jsdelivr.net/npm/aubiojs@0.1.1/build/aubio.min.js"></script>
