Chord Library Finished

--- a/chords.html
+++ b/chords.html
@@ -32,10 +32,14 @@
           <span class="bar"></span>
         </div>
       </nav>
+    <div class="header-container">
+      <h1>Chord Library</h1>
+    </div>
 
     <div class="chord-container">
+
       <div id="chord-generator">
-        <h1>Chord Generator</h1>
+
         <div>
             <label for="instrument-select">Instrument:</label>
             <select id="instrument-select">
