--- a/chords.html
+++ b/chords.html
@@ -16,7 +16,7 @@
         <div class="navbar-container">
           <ul class="navbar-menu">
             <li class="navbar-item">
-              <a href="/" class="navbar-links1"> Song Finder </a>
+              <a href="/songfinder.html" class="navbar-links1"> Song Finder </a>
             </li>
             <li class="navbar-item">
               <a href="/tuner.html" class="navbar-links2"> Tuner </a>
