--- a/tuner.html
+++ b/tuner.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1,user-scalable=no"
     />
-    <title>Guitar Tab Tracker</title>
+    <title>Guitar Hub</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="navbar.css" /> 
   </head>
