This was your almost final

--- a/tuner.html
+++ b/tuner.html
@@ -16,7 +16,7 @@
         <!--<div class="Guitar"> Guitar Hub</div>-->
         <ul class="navbar-menu">
           <li class="navbar-item">
-            <a href="/songfinder.html" class="navbar-links1"> Song Finder </a>
+            <a href="/" class="navbar-links1"> Song Finder </a>
           </li>
           <li class="navbar-item">
             <a href="/tuner.html" class="navbar-links2"> Tuner </a>
