Made changes and now integrated both of the application, but it needs a little workaround between live server and node server

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <li class="navbar-item">
               <a href="/chords.html" class="navbar-links2"> Chords </a>
             </li>
+            <li class="navbar-item">
+              <a href="http://localhost:3000/" class="navbar-links2"> Genre & Chords Detection </a>
+            </li>
           </ul>
         </div>
         <div class="navbar-toggle" id="mobile-menu">
