--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Guitar Tab Tracker</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="navbar.css" /> 
-    <link rel="stylesheet" href="songfinder.css" /> 
+    <link rel="stylesheet" href="songfinder.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -23,6 +23,9 @@
             </li>
             <li class="navbar-item">
               <a href="/chords.html" class="navbar-links2"> Chords </a>
+            </li>
+            <li class="navbar-item">
+              <a href="http://localhost:3000/" class="navbar-links2"> Genre & Chords Detection </a>
             </li>
           </ul>
         </div>
