Made minor Changes to UI

--- a/tuner.html
+++ b/tuner.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1,user-scalable=no"
     />
-    <title>Guitar Hub</title>
+    <title>Guitar Tab Tracker</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="navbar.css" /> 
   </head>
@@ -16,13 +16,18 @@
         <!--<div class="Guitar"> Guitar Hub</div>-->
         <ul class="navbar-menu">
           <li class="navbar-item">
-            <a href="/songfinder.html" class="navbar-links1"> Song Finder </a>
+            <a href="/" class="navbar-links1"> Song Finder </a>
           </li>
           <li class="navbar-item">
             <a href="/tuner.html" class="navbar-links2"> Tuner </a>
           </li>
           <li class="navbar-item">
             <a href="/chords.html" class="navbar-links2"> Chords </a>
+          </li>
+          <li class="navbar-item">
+            <a href="http://localhost:3000/" class="navbar-links2">
+              Genre & Chords Detection
+            </a>
           </li>
         </ul>
       </div>
