--- a/tuner.html
+++ b/tuner.html
@@ -16,7 +16,7 @@
         <!--<div class="Guitar"> Guitar Hub</div>-->
         <ul class="navbar-menu">
           <li class="navbar-item">
-            <a href="/" class="navbar-links1"> Song Finder </a>
+            <a href="/songfinder.html" class="navbar-links1"> Song Finder </a>
           </li>
           <li class="navbar-item">
             <a href="/tuner.html" class="navbar-links2"> Tuner </a>
@@ -26,7 +26,7 @@
           </li>
           <li class="navbar-item">
             <a href="http://localhost:3000/" class="navbar-links2">
-              Genre & Chords Detection
+              Song Genres
             </a>
           </li>
         </ul>
@@ -37,6 +37,9 @@
         <span class="bar"></span>
       </div>
     </nav>
+    <div class="header-container">
+      <h2>Tuner</h2>
+    </div>
     <div class="note-flipper-container">
       <div class="a4">A<sub>4</sub> = <span>440</span> Hz</div>
       <label class="auto">
@@ -44,6 +47,7 @@
         <input type="checkbox" checked />
       </label>
     </div>
+
     <canvas class="frequency-bars"></canvas>
     <div class="meter">
       <div class="meter-dot"></div>
