--- a/chords.html
+++ b/chords.html
@@ -16,7 +16,7 @@
         <div class="navbar-container">
           <ul class="navbar-menu">
             <li class="navbar-item">
-              <a href="/" class="navbar-links1"> Song Finder </a>
+              <a href="/songfinder.html" class="navbar-links1"> Song Finder </a>
             </li>
             <li class="navbar-item">
               <a href="/tuner.html" class="navbar-links2"> Tuner </a>
@@ -26,7 +26,7 @@
             </li>
             <li class="navbar-item">
               <a href="http://localhost:3000/" class="navbar-links2">
-                Genre & Chords Detection
+                Song Genres
               </a>
             </li>
           </ul>
