--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="navbar-container">
           <ul class="navbar-menu">
             <li class="navbar-item">
-              <a href="/" class="navbar-links1"> Song Finder </a>
+              <a href="/songfinder.html" class="navbar-links1"> Song Finder </a>
             </li>
             <li class="navbar-item">
               <a href="/tuner.html" class="navbar-links2"> Tuner </a>
@@ -25,7 +25,7 @@
               <a href="/chords.html" class="navbar-links2"> Chords </a>
             </li>
             <li class="navbar-item">
-              <a href="http://localhost:3000/" class="navbar-links2"> Genre & Chords Detection </a>
+              <a href="http://localhost:3000/" class="navbar-links2">Song Genres </a>
             </li>
           </ul>
         </div>
